test/libsolidity/syntaxTests/parsing/declaring_fixed_literal_variables.sol
contract A {
    fixed40x40 pi = 3.14;
}
// ----
// TypeError: (33-37): Type rational_const 157 / 50 is not implicitly convertible to expected type fixed40x40. Try converting to type ufixed16x2 or use an explicit conversion.
